--- a/PaintPlusPlus/mainwindow.ui
+++ b/PaintPlusPlus/mainwindow.ui
@@ -27,10 +27,10 @@
    <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>10</y>
-      <width>841</width>
-      <height>631</height>
+      <x>150</x>
+      <y>0</y>
+      <width>981</width>
+      <height>651</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
@@ -63,72 +63,22 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>152</width>
-      <height>403</height>
+      <width>168</width>
+      <height>370</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="4" column="1">
-      <widget class="QPushButton" name="Color_button">
+     <item row="7" column="1" colspan="2">
+      <widget class="QPushButton" name="paintFillButton">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <property name="text">
-        <string>Color</string>
+        <string>PaintFill</string>
        </property>
       </widget>
      </item>
-     <item row="9" column="1">
-      <widget class="QPushButton" name="figureeraserButton">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="text">
-        <string>Figure eraser</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QPushButton" name="squareButton">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="text">
-        <string>Cuadrado</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="penButton">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="text">
-        <string>Pen</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="pencilButton">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="text">
-        <string>Pencil</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Grosor general:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
+     <item row="4" column="1" colspan="2">
       <widget class="QPushButton" name="circle_Button">
        <property name="enabled">
         <bool>false</bool>
@@ -138,7 +88,17 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
+     <item row="1" column="1" colspan="2">
+      <widget class="QPushButton" name="penButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Pen</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="2">
       <widget class="QSpinBox" name="spinBox">
        <property name="enabled">
         <bool>false</bool>
@@ -154,7 +114,47 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
+     <item row="5" column="1" colspan="2">
+      <widget class="QPushButton" name="Color_button">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Color</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1" colspan="2">
+      <widget class="QPushButton" name="squareButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Cuadrado</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1" colspan="2">
+      <widget class="QPushButton" name="pencilButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Pencil</string>
+       </property>
+      </widget>
+     </item>
+     <item row="11" column="1" colspan="2">
+      <widget class="QPushButton" name="figureeraserButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Figure eraser</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1" colspan="2">
       <widget class="QPushButton" name="colorPickerButton">
        <property name="enabled">
         <bool>false</bool>
@@ -164,7 +164,27 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="1">
+     <item row="8" column="1">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Grosor:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="13" column="1">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Zoom:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="1" colspan="2">
       <widget class="QPushButton" name="eraserButton">
        <property name="enabled">
         <bool>false</bool>
@@ -174,13 +194,36 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
-      <widget class="QPushButton" name="paintFillButton">
-       <property name="enabled">
-        <bool>false</bool>
+     <item row="13" column="2">
+      <widget class="QDoubleSpinBox" name="zoomSpin">
+       <property name="suffix">
+        <string/>
        </property>
+       <property name="minimum">
+        <double>1.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>2.500000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>0.010000000000000</double>
+       </property>
+       <property name="value">
+        <double>1.000000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="undoButton">
        <property name="text">
-        <string>PaintFill</string>
+        <string>Undo</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QPushButton" name="redolistButton">
+       <property name="text">
+        <string>Redo</string>
        </property>
       </widget>
      </item>
@@ -228,84 +271,6 @@
      <string>Coords (x,y)</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="undoButton">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>430</y>
-      <width>51</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Undo</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="redolistButton">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>430</y>
-      <width>41</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Redo</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="GrisesButton">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>480</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Grises</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="negativoButton">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>480</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Negativo</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>480</y>
-      <width>61</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Sepia</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pastelButton">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>520</y>
-      <width>89</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Pastel</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -313,7 +278,7 @@
      <x>0</x>
      <y>0</y>
      <width>1132</width>
-     <height>27</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuArchivo">
@@ -346,6 +311,8 @@
     </property>
     <addaction name="actionEscala_de_Grisis"/>
     <addaction name="actionNegativo"/>
+    <addaction name="actionSepia"/>
+    <addaction name="actionPastel"/>
    </widget>
    <addaction name="menuArchivo"/>
    <addaction name="menuImagen"/>
@@ -405,6 +372,16 @@
   <action name="actionNegativo">
    <property name="text">
     <string>Negativo</string>
+   </property>
+  </action>
+  <action name="actionSepia">
+   <property name="text">
+    <string>Sepia</string>
+   </property>
+  </action>
+  <action name="actionPastel">
+   <property name="text">
+    <string>Pastel</string>
    </property>
   </action>
  </widget>
